--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,24 @@
 [versions]
 agp = "8.10.0"
 dotlottieAndroid = "0.5.0"
-firebaseBom = "33.12.0"
+firebaseBom = "33.13.0"
 kotlin = "2.0.21"
-compose = "1.7.8"
+compose = "1.8.1"
 lottieCompose = "6.3.0"
-material3 = "1.3.1"
-coreKtx = "1.15.0"
+material3 = "1.3.2"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.7"
+lifecycleRuntimeKtx = "2.9.0"
 activityCompose = "1.10.1"
-composeBom = "2025.03.01"
-navigationRuntimeKtx = "2.8.9"
-navigationCompose = "2.8.9"
+composeBom = "2025.05.00"
+navigationRuntimeKtx = "2.9.0"
+navigationCompose = "2.9.0"
 retrofit = "2.9.0"
 okhttp = "4.12.0"
+iconsCore = "1.7.8"
+iconsExtended = "1.7.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -41,6 +43,8 @@ androidx-navigation-compose = { group = "androidx.navigation", name = "navigatio
 lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "lottieCompose" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+androidx-material-icons-core = { group = "androidx.compose.material", name = "material-icons-core", version.ref = "iconsCore" }
+androidx-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "iconsExtended" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
